# github-template

./: cargo-generate.toml
crates/{{project-name}}/: Cargo.toml
crates/{{project-name}}/src/: config.rs  prelude.rs
{{project-name}}/: Cargo.toml
{{project-name}}/src/: lib.rs  prelude.rs
