[package]
name = "{{project-name}}"
authors.workspace = true
edition.workspace = true
# homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", default-features = false, features = ["serde_derive"] }
envy = "0.4"
once_cell = "1"
easy-ext = "1"
monostate = "0.1.6"
automod = "1"
indexmap = { version = "1.9.3", features = ["serde"] }
itertools = "0.10.5"
lazy_static = "1"
eyre = "0.6.8"
[dev-dependencies]
insta = "1"